# fcplay

./: COPYING  INSTALL  README  configure.ac
include/: Makefile.am
include/sound/: compress_params.h
src/: Makefile.am  fcplay.c
